--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -15,7 +15,7 @@
         margin-right: 30px;
     }
     &:hover {
-        background: rgba(255, 218, 153, .6);
+        background: rgba(245, 191, 98, 0.8);
     }
 }
 
