--- a/styles/_about-yoga.scss
+++ b/styles/_about-yoga.scss
@@ -7,6 +7,21 @@
     &__text {
         margin-right: 30px;
         max-width: 800px;
+        position: relative;
+        &:before {
+            content: ' ';
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.07;
+            left: -400px;
+            background-image: url('../img/icon.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
     }
 }
 
