--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-size: 19px;
+    font-size: 20px;
     scroll-behavior: smooth;
 }
 
@@ -43,6 +43,18 @@ a {
 h1 {
     color: #ffe586;
     font-size: 3.5rem;
+    animation-duration: 2s;
+    animation-name: slidein;
+    @keyframes slidein {
+        from {
+            margin-left: 100%;
+            width: 300%;
+        }
+        to {
+            margin-left: 0%;
+            width: 100%;
+        }
+    }
 }
 
 @media screen and (max-width: 1024px) {
