--- a/styles/_comment-info.scss
+++ b/styles/_comment-info.scss
@@ -7,10 +7,18 @@
     img {
         max-width: 380px;
         width: 100%;
+        transition: .5s;
+        &:hover {
+            transform: scale(1.1);
+        }
     }
     &__title {
         margin-top: 20px;
         font-size: 1rem;
+        transition: .5s;
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 }
 
