--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -6,9 +6,17 @@
         transition: .5s;
         &:hover {
             transform: scale(1.2);
+            border-bottom: 1px solid #ef992b;
         }
         &:not(:last-of-type) {
             margin-right: 20px;
         }
     }
+    &__icon {
+        &:hover {
+            border: none;
+        }
+    }
 }
+
+@media screen and (max-width: 700px) {}
