--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-size: 19px;
+  font-size: 20px;
   scroll-behavior: smooth;
 }
 
@@ -42,6 +42,18 @@ a {
 h1 {
   color: #ffe586;
   font-size: 3.5rem;
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -68,6 +80,7 @@ header {
   text-align: center;
   position: fixed;
   width: 100%;
+  z-index: 999;
 }
 
 .menu__item {
@@ -78,9 +91,13 @@ header {
 }
 .menu__item:hover {
   transform: scale(1.2);
+  border-bottom: 1px solid #ef992b;
 }
 .menu__item:not(:last-of-type) {
   margin-right: 20px;
+}
+.menu__icon:hover {
+  border: none;
 }
 
 .banner {
@@ -88,6 +105,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   padding: 318px 0 300px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 460px) {
@@ -114,7 +132,7 @@ header {
   margin-right: 30px;
 }
 .button:hover {
-  background: rgba(255, 218, 153, 0.6);
+  background: rgba(245, 191, 98, 0.8);
 }
 
 @media screen and (max-width: 620px) {
@@ -154,6 +172,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 
 @media screen and (max-width: 1197px) {
@@ -203,6 +222,21 @@ header {
 .about-yoga__text {
   margin-right: 30px;
   max-width: 800px;
+  position: relative;
+}
+.about-yoga__text:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.07;
+  left: -400px;
+  background-image: url("../img/icon.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 @media screen and (max-width: 1024px) {
@@ -242,7 +276,6 @@ h2 {
 }
 .events-info {
   background: #FFFFFF;
-  border: 2px solid #F1F1F1;
   width: calc((100% - 40px) / 2);
   max-width: 384px;
   border-radius: 40px;
@@ -280,6 +313,9 @@ h2 {
 }
 .events-info__title {
   margin-bottom: 20px;
+}
+.events-info:hover {
+  background-color: rgba(239, 153, 43, 0.1);
 }
 
 @media screen and (max-width: 783px) {
@@ -353,9 +389,17 @@ h2 {
 .article-info img {
   max-width: 380px;
   width: 100%;
+  transition: 0.5s;
+}
+.article-info img:hover {
+  transform: scale(1.1);
 }
 .article-info__desc {
   margin-top: 15px;
+  transition: 0.5s;
+}
+.article-info__desc:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 600px) {
@@ -401,10 +445,18 @@ h2 {
 .comment-info img {
   max-width: 380px;
   width: 100%;
+  transition: 0.5s;
+}
+.comment-info img:hover {
+  transform: scale(1.1);
 }
 .comment-info__title {
   margin-top: 20px;
   font-size: 1rem;
+  transition: 0.5s;
+}
+.comment-info__title:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 700px) {
