--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,36 +1,37 @@
-@import '_base';
-@import 'mixins';
-@import 'variables';
-@import '_header';
-@import '_menu';
-@import '_banner';
-@import '_button-box';
-@import '_button';
-@import '_about-teacher';
-@import '_background-lightgrey';
-@import '_wrapper';
 @import '_about-teacher-box';
+@import '_about-teacher';
 @import '_about-yoga-box';
 @import '_about-yoga';
-@import '_events';
+@import '_article-info';
+@import '_articles';
 @import '_background-grey';
-@import '_heading';
+@import '_background-lightgrey';
+@import '_banner';
+@import '_base';
+@import '_box';
+@import '_button-box';
+@import '_button';
+@import '_comment-info';
+@import '_commentation';
+@import '_container';
 @import '_events-box';
 @import '_events-info';
+@import '_events';
+@import '_footer';
+@import '_header';
+@import '_heading';
 @import '_info-section';
 @import '_info-section2';
 @import '_info-section3';
 @import '_info-section4';
-@import '_articles';
-@import '_container';
-@import '_article-info';
-@import '_commentation';
-@import '_box';
-@import '_comment-info';
-@import '_quote';
-@import '_notice';
-@import '_reviews-box';
+@import '_menu-burger';
+@import '_menu';
+@import 'mixins';
 @import '_notice-item';
-@import '_footer';
-@import '_social-links';
+@import '_notice';
+@import '_quote';
+@import '_reviews-box';
 @import '_scroll-up';
+@import '_social-links';
+@import 'variables';
+@import '_wrapper';
