--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,12 +26,13 @@
 @import '_info-section4';
 @import '_menu-burger';
 @import '_menu';
-@import 'mixins';
+@import '_mixins';
 @import '_notice-item';
 @import '_notice';
+@import '_popup';
 @import '_quote';
 @import '_reviews-box';
 @import '_scroll-up';
 @import '_social-links';
-@import 'variables';
+@import '_variables';
 @import '_wrapper';
