--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,6 +1,6 @@
 header {
     background-color: #f0f0f0;
-    padding: 15px 0;
+    padding: 15px;
     text-align: center;
     position: fixed;
     width: 100%;
