--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -1,10 +1,26 @@
 .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    max-width: 1000px;
+    align-items: baseline;
+    margin: 0 auto;
+    &__logo {
+        &:hover {
+            border: none;
+        }
+    }
+    &__logo-img {
+        width: 35px;
+        height: 35px;
+        vertical-align: middle;
+    }
     &__item {
         display: inline-block;
         font-weight: 600;
         font-size: 0.8rem;
         transition: .5s;
-        &:hover {
+        &:hover:not(:first-child) {
             transform: scale(1.2);
             border-bottom: 1px solid #ef992b;
         }
@@ -14,9 +30,31 @@
     }
     &__icon {
         &:hover {
-            border: none;
+            border-bottom: none;
         }
     }
 }
 
-@media screen and (max-width: 700px) {}
+@media screen and (max-width: 740px) {
+    .menu {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        &__item {
+            display: none;
+            &:not(:last-of-type) {
+                margin: 0 0 7px 0;
+            }
+        }
+        &__icon {
+            display: none;
+        }
+        &__logo {
+            display: block;
+            position: absolute;
+            left: 20px;
+            top: 7px;
+        }
+    }
+}
