--- a/styles/_wrapper-menu.scss
+++ b/styles/_wrapper-menu.scss
@@ -1,5 +1,7 @@
 .wrapper-menu {
     max-width: 1000px;
     display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
     margin: 0 auto;
 }
