--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,7 +27,7 @@
 @import '_info-section3';
 @import '_info-section4';
 @import '_likes-number';
-@import 'logo';
+@import '_logo';
 @import '_menu-burger';
 @import '_menu';
 @import '_mixins';
