--- a/styles/_heart.scss
+++ b/styles/_heart.scss
@@ -1,6 +1,6 @@
 .heart {
     display: flex;
-    background-image: url(/icons/heart-regular.svg);
+    background-image: url(../icons/heart-regular.svg);
     align-items: center;
     padding: 12px 10px;
     width: 37px;
