--- a/styles/style.css
+++ b/styles/style.css
@@ -483,7 +483,7 @@ h2 {
 
 .heart {
   display: flex;
-  background-image: url(/icons/heart-regular.svg);
+  background-image: url(../icons/heart-regular.svg);
   align-items: center;
   padding: 12px 10px;
   width: 37px;
