--- a/styles/_reviews.scss
+++ b/styles/_reviews.scss
@@ -1,11 +1,11 @@
-.commentation {
+.reviews {
     &__desc {
         margin-bottom: 30px;
     }
 }
 
 @media screen and (max-width: 700px) {
-    .commentation {
+    .reviews {
         padding: 50px 10px;
     }
 }
