--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,8 +11,8 @@
 @import '_box';
 @import '_button-box';
 @import '_button';
-@import '_comment-info';
-@import '_commentation';
+@import '_reviews-info';
+@import '_comments';
 @import '_container';
 @import '_events-box';
 @import '_events-info';
@@ -31,12 +31,12 @@
 @import '_menu-burger';
 @import '_menu';
 @import '_mixins';
-@import '_notice-item';
-@import '_notice';
+@import '_comments-item';
 @import '_popup';
 @import '_quote';
-@import '_reviews-box';
+@import '_reviews';
 @import '_scroll-up';
+@import '_slider';
 @import '_social-links';
 @import '_variables';
 @import '_wrapper-menu';
