--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -30,6 +30,12 @@ section {
     }
 }
 
+@media screen and (max-width: 770px) {
+    section {
+        padding: 50px 0;
+    }
+}
+
 .wrapper {
     max-width: 1700px;
     margin: 0 auto;
