--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,12 +8,10 @@
 @import '_background-lightgrey';
 @import '_banner';
 @import '_base';
-@import '_box';
 @import '_button-box';
 @import '_button';
 @import '_reviews-info';
 @import '_comments';
-@import '_container';
 @import '_events-box';
 @import '_events-info';
 @import '_events';
@@ -36,6 +34,8 @@
 @import '_quote';
 @import '_reviews';
 @import '_scroll-up';
+@import '_slider-article';
+@import '_slider-reviews';
 @import '_slider';
 @import '_social-links';
 @import '_variables';
