--- a/styles/_about-yoga.scss
+++ b/styles/_about-yoga.scss
@@ -12,12 +12,10 @@
             content: ' ';
             display: block;
             position: absolute;
-            left: 0;
-            top: 0;
             width: 100%;
             height: 100%;
             opacity: 0.07;
-            left: -400px;
+            left: -300px;
             background-image: url('../img/icon.png');
             background-repeat: no-repeat;
             background-size: contain;
@@ -30,6 +28,16 @@
         &__picture {
             img {
                 max-width: 300px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .about-yoga {
+        &__text {
+            &:before {
+                left: -200px;
             }
         }
     }
