--- a/styles/_article-info.scss
+++ b/styles/_article-info.scss
@@ -1,9 +1,5 @@
 .article-info {
-    width: calc((100% - 40px*2)/3);
-    max-width: 380px;
-    &:not(:last-child) {
-        margin-right: 40px;
-    }
+    margin-bottom: 50px;
     img {
         max-width: 380px;
         width: 100%;
@@ -23,9 +19,6 @@
 
 @media screen and (max-width: 600px) {
     .article-info {
-        &:not(:last-child) {
-            margin-right: 15px;
-        }
         &__desc {
             font-size: 0.9rem;
         }
@@ -35,9 +28,6 @@
 @media screen and (max-width: 440px) {
     .article-info {
         min-width: 110px;
-        &:not(:last-child) {
-            margin-right: 10px;
-        }
         &__desc {
             margin-top: 10px;
         }
