--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -30,9 +30,9 @@ section {
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 650px) {
     section {
-        padding: 50px 0;
+        padding: 30px 10px;
     }
 }
 
