--- a/styles/_comments.scss
+++ b/styles/_comments.scss
@@ -4,3 +4,9 @@
     // padding: 80px 40px;
     //}
 }
+
+@media screen and (max-width: 770px) {
+    .comments {
+        padding: 50px 0;
+    }
+}
