--- a/styles/_reviews-info.scss
+++ b/styles/_reviews-info.scss
@@ -1,9 +1,5 @@
 .reviews-info {
-    width: calc((100% - 40px*2)/3);
-    max-width: 380px;
-    &:not(:last-child) {
-        margin-right: 40px;
-    }
+    margin-bottom: 50px;
     img {
         max-width: 380px;
         width: 100%;
@@ -28,9 +24,6 @@
             font-size: 0.8rem;
             margin-top: 10px;
         }
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
     }
 }
 
@@ -39,9 +32,6 @@
         min-width: 110px;
         &__title {
             font-size: 0.65rem;
-        }
-        &:not(:last-child) {
-            margin-right: 10px;
         }
     }
 }
