--- a/styles/_scroll-up.scss
+++ b/styles/_scroll-up.scss
@@ -5,6 +5,7 @@
     bottom: 30px;
     font-size: 2.5rem;
     transition: all .3s linear;
+    z-index: 998;
     &:hover {
         opacity: 100%;
     }
