--- a/styles/_heart.scss
+++ b/styles/_heart.scss
@@ -1,15 +1,15 @@
-.heart {
-    display: flex;
-    background-image: url(../icons/heart-regular.svg);
-    align-items: center;
-    padding: 12px 10px;
-    width: 37px;
-    height: 20px;
-    font-weight: bold;
-    font-size: 1rem;
-    border: none;
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-position: 12px;
-    cursor: pointer;
-}
+// .heart {
+//     display: flex;
+//     background-image: url(../icons/heart-regular.svg);
+//     align-items: center;
+//     padding: 12px 10px;
+//     width: 37px;
+//     height: 20px;
+//     font-weight: bold;
+//     font-size: 1rem;
+//     border: none;
+//     background-color: transparent;
+//     background-repeat: no-repeat;
+//     background-position: 12px;
+//     cursor: pointer;
+// }
