--- a/styles/_events-info.scss
+++ b/styles/_events-info.scss
@@ -6,6 +6,11 @@
     box-shadow: 2px 2px 5px 5px rgba(239, 153, 43, 0.5);
     padding: 20px 30px;
     position: relative;
+    transition: .5s;
+    &:hover {
+        transform: scale(1.05);
+        background-color: rgba(239, 153, 43, 0.1);
+    }
     &:not(:last-child) {
         margin-right: 40px;
     }
