--- a/styles/style.css
+++ b/styles/style.css
@@ -200,20 +200,16 @@ a {
 }
 
 h1 {
-  color: #ffe586;
+  color: rgb(249, 221, 118);
   font-size: 3.5rem;
-  animation-duration: 2s;
-  animation-name: slidein;
+  visibility: hidden;
+  transform: translateY(30px);
+  transition: 1s;
 }
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
+
+.visible {
+  visibility: visible;
+  transform: translateY(0);
 }
 
 @media screen and (max-width: 1024px) {
